# Iris-Engine

./: .gitmodules  CMakeLists.txt  README.md
assets/models/Star/: Star.mtl
assets/models/lowPolyBoat/: lowPolyBoat.mtl
scr/: Engine.cpp  Engine.hpp  Iris.cpp
scr/ai/: NavigationArea2D.cpp  NavigationArea2D.hpp  NavigationArea3D.cpp  NavigationArea3D.hpp  NavigationTile2D.cpp  NavigationTile2D.hpp  NavigationTile3D.cpp  NavigationTile3D.hpp
scr/app/: Objects.cpp  Objects.hpp  Scene.cpp  Scene.hpp
scr/core/: Actor.cpp  Actor.hpp  Component.cpp  Component.hpp
scr/graphics/: AssetsManager.cpp  AssetsManager.hpp  Debugger.cpp  Debugger.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Initializers.cpp  Initializers.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  Objects.cpp  Objects.hpp  Pipeline.cpp  Pipeline.hpp  Rasteriser.cpp  Rasteriser.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Swapchain.cpp  Swapchain.hpp  Window.cpp  Window.hpp
scr/graphics/Renderers/: DeferredRenderer.cpp  DeferredRenderer.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  Rasteriser.cpp  Rasteriser.hpp  Renderer.cpp  Renderer.hpp
scr/graphics/renderers/: ForwardRenderer.cpp  ForwardRenderer.hpp  Renderer.cpp  Renderer.hpp
scr/scenes/: Scene2DNav.cpp  Scene2DNav.hpp  Scene3DNav.cpp  Scene3DNav.hpp
scr/utilities/: Timer.hpp
shaders/: DebugBox.frag  DebugBox.frag.spv  DebugBox.vert  DebugBox.vert.spv  Default.frag  Default.frag.spv  Default.vert  Default.vert.spv  DefaultTextured.frag  DefaultTextured.frag.spv  DeferredGeometry.frag  DeferredGeometry.frag.spv  DeferredGeometry.vert  DeferredLight.frag  DeferredLight.frag.spv  DeferredLight.vert  DeferredLight.vert.spv
